# karp-6-be-es

./: Makefile  requirements.txt  setup.cfg
.github/workflows/: build.yml
karp/: application.py
karp/domain/: resource.py
tests/: test_karp_application.py
tests/unit_tests/: domain_resource_unit_test.py
